Adjust spacing, fonts, and sizes (Resolves #9)

--- a/css/sass/_base.scss
+++ b/css/sass/_base.scss
@@ -1,9 +1,9 @@
 /* @group ----- Typography ----- */
 
-$base-font-size: 12px;
-$base-line-height: 18px;
+$base-font-size: 1rem;
+$base-line-height: 1.5rem;
 
-$spacing-unit: $base-line-height;
+$spacing-unit: 18px;
 /* @end */
 
 /* @group ----- Colors ----- */
